snapshots/DeepSpeech/native_client/kenlm/lm/test__fragment_main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 37,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "Query",
            ),
            start_line: 6,
            end_line: 17,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 1,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 1,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 3,
                    structural_sum: 3,
                    structural_min: 3,
                    structural_max: 3,
                    nesting: 1,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 3.000,
                    cyclomatic: 3.000,
                    n: 1,
                    cyclomatic_max: 3.000,
                    cyclomatic_min: 3.000,
                },
                halstead: Stats {
                    u_operators: 14,
                    operators: 52,
                    u_operands: 21,
                    operands: 33,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 5,
                        end: 16,
                        unit: fal,
                        sloc_min: 12,
                        sloc_max: 12,
                    },
                    ploc: Ploc {
                        lines: {
                            16,
                            13,
                            10,
                            7,
                            14,
                            11,
                            8,
                            5,
                            15,
                            12,
                            9,
                            6,
                        },
                        ploc_min: 12,
                        ploc_max: 12,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 8,
                        lloc_min: 8,
                        lloc_max: 8,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 85.000,
                    halstead_vocabulary: 35.000,
                    halstead_volume: 435.989,
                    cyclomatic: 3.000,
                    sloc: 12.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 19,
            end_line: 37,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 2,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 1,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 1,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 2,
                    structural_sum: 2,
                    structural_min: 2,
                    structural_max: 2,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 4.000,
                    cyclomatic: 4.000,
                    n: 1,
                    cyclomatic_max: 4.000,
                    cyclomatic_min: 4.000,
                },
                halstead: Stats {
                    u_operators: 20,
                    operators: 69,
                    u_operands: 18,
                    operands: 30,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 18,
                        end: 36,
                        unit: fal,
                        sloc_min: 19,
                        sloc_max: 19,
                    },
                    ploc: Ploc {
                        lines: {
                            32,
                            29,
                            26,
                            23,
                            20,
                            34,
                            31,
                            28,
                            25,
                            22,
                            19,
                            36,
                            33,
                            30,
                            27,
                            24,
                            21,
                            18,
                            35,
                        },
                        ploc_min: 19,
                        ploc_max: 19,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 15,
                        lloc_min: 15,
                        lloc_max: 15,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 99.000,
                    halstead_vocabulary: 38.000,
                    halstead_volume: 519.545,
                    cyclomatic: 4.000,
                    sloc: 19.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 3,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 2,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 1,
            total_space_functions: 2,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 5,
            structural_min: 0,
            structural_max: 3,
            nesting: 0,
            total_space_functions: 2,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 8.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 4.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 123,
            u_operands: 41,
            operands: 68,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 37,
                unit: tru,
                sloc_min: 12,
                sloc_max: 19,
            },
            ploc: Ploc {
                lines: {
                    0,
                    34,
                    31,
                    28,
                    25,
                    22,
                    19,
                    16,
                    13,
                    10,
                    7,
                    1,
                    35,
                    32,
                    29,
                    26,
                    23,
                    20,
                    14,
                    11,
                    8,
                    5,
                    2,
                    36,
                    33,
                    30,
                    27,
                    24,
                    21,
                    18,
                    15,
                    12,
                    9,
                    6,
                    3,
                },
                ploc_min: 12,
                ploc_max: 19,
            },
            cloc: Cloc {
                only_comment_lines: 0,
                code_comment_lines: 0,
                comment_line_end: None,
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 23,
                lloc_min: 8,
                lloc_max: 15,
            },
            space_count: 3,
            blank_min: 0,
            blank_max: 0,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 2,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 191.000,
            halstead_vocabulary: 65.000,
            halstead_volume: 1150.272,
            cyclomatic: 8.000,
            sloc: 37.000,
            comments_percentage: 0.000,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
