snapshots/DeepSpeech/native_client/kenlm/lm/test__model_type.hh.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 23,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "lm",
            ),
            start_line: 4,
            end_line: 22,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "ngram",
                    ),
                    start_line: 5,
                    end_line: 21,
                    kind: Namespace,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 0,
                            closure_nargs: 0,
                            fn_nargs_sum: 0,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 0,
                            closure_nargs_min: 0,
                            fn_nargs_max: 0,
                            closure_nargs_max: 0,
                            total_functions: 0,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 0,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 0,
                            structural_sum: 0,
                            structural_min: 0,
                            structural_max: 0,
                            nesting: 0,
                            total_space_functions: 0,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 1.000,
                            cyclomatic: 1.000,
                            n: 1,
                            cyclomatic_max: 1.000,
                            cyclomatic_min: 1.000,
                        },
                        halstead: Stats {
                            u_operators: 8,
                            operators: 36,
                            u_operands: 22,
                            operands: 41,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 4,
                                end: 20,
                                unit: fal,
                                sloc_min: 17,
                                sloc_max: 17,
                            },
                            ploc: Ploc {
                                lines: {
                                    13,
                                    4,
                                    17,
                                    14,
                                    11,
                                    8,
                                    20,
                                    18,
                                    15,
                                    12,
                                },
                                ploc_min: 10,
                                ploc_max: 10,
                            },
                            cloc: Cloc {
                                only_comment_lines: 3,
                                code_comment_lines: 0,
                                comment_line_end: Some(
                                    10,
                                ),
                                cloc_min: 3,
                                cloc_max: 3,
                            },
                            lloc: Lloc {
                                logical_lines: 7,
                                lloc_min: 7,
                                lloc_max: 7,
                            },
                            space_count: 1,
                            blank_min: 4,
                            blank_max: 4,
                        },
                        nom: Stats {
                            functions: 0,
                            closures: 0,
                            functions_sum: 0,
                            closures_sum: 0,
                            functions_min: 0,
                            functions_max: 0,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 77.000,
                            halstead_vocabulary: 30.000,
                            halstead_volume: 377.831,
                            cyclomatic: 1.000,
                            sloc: 17.000,
                            comments_percentage: 0.176,
                        },
                        abc: Stats {
                            assignments: 0.000,
                            assignments_sum: 0.000,
                            assignments_min: 0.000,
                            assignments_max: 0.000,
                            branches: 0.000,
                            branches_sum: 0.000,
                            branches_min: 0.000,
                            branches_max: 0.000,
                            conditions: 0.000,
                            conditions_sum: 0.000,
                            conditions_min: 0.000,
                            conditions_max: 0.000,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.000,
                            class_wmc: 0.000,
                            interface_wmc: 0.000,
                            class_wmc_sum: 0.000,
                            interface_wmc_sum: 0.000,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: fal,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: fal,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 0,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 0,
                    closure_nargs_max: 0,
                    total_functions: 0,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 0,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 0,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 2.000,
                    cyclomatic: 1.000,
                    n: 2,
                    cyclomatic_max: 1.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 8,
                    operators: 37,
                    u_operands: 23,
                    operands: 42,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 3,
                        end: 21,
                        unit: fal,
                        sloc_min: 17,
                        sloc_max: 17,
                    },
                    ploc: Ploc {
                        lines: {
                            13,
                            4,
                            17,
                            14,
                            11,
                            8,
                            20,
                            18,
                            15,
                            12,
                            21,
                            3,
                        },
                        ploc_min: 10,
                        ploc_max: 10,
                    },
                    cloc: Cloc {
                        only_comment_lines: 3,
                        code_comment_lines: 1,
                        comment_line_end: None,
                        cloc_min: 3,
                        cloc_max: 3,
                    },
                    lloc: Lloc {
                        logical_lines: 7,
                        lloc_min: 7,
                        lloc_max: 7,
                    },
                    space_count: 2,
                    blank_min: 4,
                    blank_max: 4,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 0,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 0,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 79.000,
                    halstead_vocabulary: 31.000,
                    halstead_volume: 391.382,
                    cyclomatic: 2.000,
                    sloc: 19.000,
                    comments_percentage: 0.211,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 0,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 3.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 1.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 8,
            operators: 37,
            u_operands: 24,
            operands: 44,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 23,
                unit: tru,
                sloc_min: 19,
                sloc_max: 19,
            },
            ploc: Ploc {
                lines: {
                    0,
                    20,
                    17,
                    14,
                    11,
                    8,
                    22,
                    13,
                    4,
                    1,
                    21,
                    18,
                    15,
                    12,
                    3,
                },
                ploc_min: 12,
                ploc_max: 12,
            },
            cloc: Cloc {
                only_comment_lines: 3,
                code_comment_lines: 3,
                comment_line_end: None,
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 7,
                lloc_min: 7,
                lloc_max: 7,
            },
            space_count: 3,
            blank_min: 4,
            blank_max: 4,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 81.000,
            halstead_vocabulary: 32.000,
            halstead_volume: 405.000,
            cyclomatic: 3.000,
            sloc: 23.000,
            comments_percentage: 0.261,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
